@@ -532,7 +532,6 @@ void tle_update_from_network (gboolean   silent,
     gchar       *userconfdir;
     CURL        *curl;
     CURLcode     res;
-    gboolean     error = FALSE;
     gdouble      fraction,start=0;
     FILE        *outfile;
     GDir        *dir;
@@ -626,7 +625,6 @@ void tle_update_from_network (gboolean   silent,
                     sat_log_log (SAT_LOG_LEVEL_ERROR,
                                  _("%s: Error fetching %s (%s)"),
                                  __FUNCTION__, curfile, curl_easy_strerror (res));
-                    error = TRUE;
                 }
                 else {
                     sat_log_log (SAT_LOG_LEVEL_MSG,
@@ -818,6 +816,11 @@ static gint read_fresh_tle (const gchar *dir, const gchar *fnam, GHashTable *dat
         catfile = g_fopen (catpath, "r");
         if (catfile!=NULL) {
             b = fgets (category, 80, catfile);
+            if (b == NULL) {
+                sat_log_log (SAT_LOG_LEVEL_ERROR,
+                             _("%s:%s: There is no category in %s"),
+                             __FILE__, __FUNCTION__, catpath);                
+            }
             fclose (catfile);
             catsync = TRUE;
         }
@@ -894,6 +897,7 @@ static gint read_fresh_tle (const gchar *dir, const gchar *fnam, GHashTable *dat
                     ntle = g_try_new (new_tle_t, 1);
                     ntle->catnum = catnr;
                     ntle->epoch = tle.epoch;
+                    ntle->status = tle.status;
                     ntle->satname = g_strdup (g_strchomp(tle_str[0]));
                     ntle->line1   = g_strdup (tle_str[1]);
                     ntle->line2   = g_strdup (tle_str[2]);
@@ -907,10 +911,23 @@ static gint read_fresh_tle (const gchar *dir, const gchar *fnam, GHashTable *dat
                     /* if the satellite in the hash is older than 
                        the one just loaded, copy the values over. */
                     ntle = g_hash_table_lookup (data, key);
-                    
-                    if (ntle->epoch <tle.epoch) {
+                    if (ntle->epoch == tle.epoch) {
+                        if (ntle->status!=tle.status) {
+                            if (tle.status != OP_STAT_UNKNOWN) {
+                                if (ntle->status!= OP_STAT_UNKNOWN) {
+                                    sat_log_log (SAT_LOG_LEVEL_ERROR,
+                                                 _("%s:%s: Two different statuses for the same satellite at the same time."),
+                                                 __FILE__, __FUNCTION__);
+
+                                }
+                                ntle->status =  tle.status;
+                            }
+                        }
+                    } 
+                    else if (ntle->epoch <tle.epoch) {
                         ntle->catnum = catnr;
                         ntle->epoch = tle.epoch;
+                        ntle->status = tle.status;
                         g_free (ntle->satname);
                         ntle->satname = g_strdup (g_strchomp(tle_str[0]));
                         g_free (ntle->line1);
@@ -988,6 +1005,7 @@ static void update_tle_in_file (const gchar *ldname,
     guint     *key = NULL;
     tle_t      tle;
     new_tle_t *ntle;
+    op_stat_t  status;
     GError    *error = NULL;
     GKeyFile  *satdata;
     gchar     *tlestr1, *tlestr2, *rawtle, *satname, *satnickname;
@@ -1041,6 +1059,13 @@ static void update_tle_in_file (const gchar *ldname,
             tlestr2 = g_key_file_get_string (satdata, "Satellite", "TLE2", NULL);
             satname = g_key_file_get_string (satdata, "Satellite", "NAME", NULL);
             satnickname = g_key_file_get_string (satdata, "Satellite", "NICKNAME", NULL);
+            if (g_key_file_has_key(satdata,"Satellite","STATUS", NULL)) {
+                status = g_key_file_get_integer (satdata, "Satellite", "STATUS", NULL);
+            }
+            else {
+                status = OP_STAT_UNKNOWN;
+            }
+            
             rawtle = g_strconcat (tlestr1, tlestr2, NULL);
 
             if (!Good_Elements (rawtle)) {
@@ -1086,7 +1111,16 @@ static void update_tle_in_file (const gchar *ldname,
 
             g_free(satname);
             g_free(satnickname);
-            
+
+            if ( status != ntle->status ){
+
+                sat_log_log (SAT_LOG_LEVEL_MSG,
+                             _("%s: Data for  %d updated for operational status."),
+                             __FUNCTION__, catnr);
+                g_key_file_set_integer (satdata, "Satellite", "STATUS", ntle->status);
+                updateddata = TRUE;
+            }
+
             if (tle.epoch < ntle->epoch) {
                 /* new data is newer than what we already have */
                 /* store new data */
